# repo-compiladores

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: algorithms.hpp  main.cpp
src/algorithms/: algorithms.hpp  direct.cpp  direct.hpp  fa_factory.hpp  minimize.cpp  minimize.hpp  postfix.cpp  postfix.hpp  regex.cpp  regex.hpp  subsets.cpp  subsets.hpp  thompson.cpp  thompson.hpp
src/algorithms/constructors/: direct.cpp  direct.hpp  fa_factory.hpp  minimize.cpp  minimize.hpp  subsets.cpp  subsets.hpp  thompson.cpp  thompson.hpp
src/algorithms/models/: automaton.cpp  automaton.hpp  constructors.hpp  props.hpp  subsets.cpp  subsets.hpp  syntax_tree.cpp  syntax_tree.hpp  thompson.cpp  thompson.hpp
src/analyzer/: yalex.cpp  yalex.hpp
src/models/: automaton.cpp
tests/: regex.test.cpp
